--- a/src/main/resources/templates/admin/admin_weekly_report_view.html
+++ b/src/main/resources/templates/admin/admin_weekly_report_view.html
@@ -84,10 +84,10 @@
             <th>First Name</th>
             <td th:text="${intern.firstName}"></td>
         </tr>
-        <tr>
-            <th>Last Name</th>
-            <td th:text="${intern.lastName}"></td>
-        </tr>
+<!--        <tr>-->
+<!--            <th>Last Name</th>-->
+<!--            <td th:text="${intern.lastName}"></td>-->
+<!--        </tr>-->
         <tr>
 
             <th><p class="text-5xl font-bold underline">Passport Size Image</p></th>
