--- a/src/main/resources/templates/admin/generate_credentials.html
+++ b/src/main/resources/templates/admin/generate_credentials.html
@@ -39,7 +39,7 @@
                         <select id="internId" name="internId" class="form-select" required>
                             <option th:each="intern : ${internList}"
                                     th:value="${intern.internId}"
-                                    th:text="${intern.firstName + ' ' + intern.lastName} +' '+ ${intern.internId}">
+                                    th:text="${intern.firstName} +' '+ ${intern.internId}">
                             </option>
                         </select>
                     </div>
