--- a/src/main/resources/templates/admin/intern_application_detail.html
+++ b/src/main/resources/templates/admin/intern_application_detail.html
@@ -73,14 +73,9 @@
               enctype="multipart/form-data">
             <table class="table table-bordered">
                 <tr>
-                    <th>First Name</th>
+                    <th>Full Name</th>
                     <td><input type="text" name="firstName"
                                th:value="${intern.get().firstName}" class="no-border"></td>
-                </tr>
-                <tr>
-                    <th>Last Name</th>
-                    <td><input type="text" name="lastName"
-                               th:value="${intern.get().lastName}" class="no-border"></td>
                 </tr>
                 <tr>
                     <th>Contact No</th>
