--- a/src/main/resources/templates/admin/intern_detail.html
+++ b/src/main/resources/templates/admin/intern_detail.html
@@ -65,7 +65,7 @@
 
 <main id="main" class="main">
 	<div class="pagetitle">
-		<h1>Intern Details<span th:text="${' - ' + intern.get().firstName + ' ' + intern.get().lastName}"></span></h1>
+		<h1>Intern Details<span th:text="${' - ' + intern.get().firstName}"></span></h1>
 	</div>
 	<div th:if="${intern.isPresent()}">
 
@@ -78,15 +78,15 @@
 							   th:value="${intern.get().internId}" class="no-border" readonly></td>
 				</tr>
 				<tr>
-					<th>First Name</th>
+					<th>Full Name</th>
 					<td><input type="text" name="firstName"
 							   th:value="${intern.get().firstName}" class="no-border"></td>
 				</tr>
-				<tr>
-					<th>Last Name</th>
-					<td><input type="text" name="lastName"
-							   th:value="${intern.get().lastName}" class="no-border"></td>
-				</tr>
+<!--				<tr>-->
+<!--					<th>Last Name</th>-->
+<!--					<td><input type="text" name="lastName"-->
+<!--							   th:value="${intern.get().lastName}" class="no-border"></td>-->
+<!--				</tr>-->
 				<tr>
 					<th>Contact No</th>
 					<td><input type="text" name="contactNo"
