--- a/src/main/resources/templates/admin/allocate_guide.html
+++ b/src/main/resources/templates/admin/allocate_guide.html
@@ -147,8 +147,8 @@
 						<thead>
 						<tr>
 							<th>ID</th>
-							<th>First Name</th>
-							<th>Last Name</th>
+							<th>Full Name</th>
+<!--							<th>Last Name</th>-->
 							<th>Email</th>
 							<th>Details</th>
 						</tr>
@@ -161,7 +161,7 @@
 									th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"><span
 									th:text="${intern.internId}"></span></a></td>
 							<td th:text="${intern.firstName}"></td>
-							<td th:text="${intern.lastName}"></td>
+<!--							<td th:text="${intern.lastName}"></td>-->
 							<td th:text="${intern.email}"></td>
 							<td><div>
 								<a th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"
@@ -206,8 +206,8 @@
 						<thead>
 						<tr>
 							<th>ID</th>
-							<th>First Name</th>
-							<th>Last Name</th>
+							<th>Full Name</th>
+<!--							<th>Last Name</th>-->
 							<th>Email</th>
 						</tr>
 						</thead>
@@ -219,7 +219,7 @@
 									th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"><span
 									th:text="${intern.internId}"></span></a></td>
 							<td th:text="${intern.firstName}"></td>
-							<td th:text="${intern.lastName}"></td>
+<!--							<td th:text="${intern.lastName}"></td>-->
 							<td th:text="${intern.email}"></td>
 							<td><div>
 								<a th:href="@{'/bisag/admin/intern/' + ${intern.internId}}"
