--- a/src/main/resources/templates/admin/query_to_guide.html
+++ b/src/main/resources/templates/admin/query_to_guide.html
@@ -69,7 +69,7 @@
 						<option value="">Select Receiver</option>
 						<option th:each="admin : ${admins}" th:value="${admin.adminId}" th:text="${admin.name}"></option>
 						<option th:each="guide : ${guides}" th:value="${guide.guideId}" th:text="${guide.name}"></option>
-						<option th:each="intern : ${interns}" th:value="${intern.internId}" th:text="${intern.firstName + ' ' + intern.lastName}"></option>
+						<option th:each="intern : ${interns}" th:value="${intern.internId}" th:text="${intern.firstName}"></option>
 						<!--						<option th:each="group : ${groups}" th:value="${group.groupId}" th:text="${group.groupId}"></option>-->
 					</select>
 
