--- a/src/main/resources/templates/admin/register_internn.html
+++ b/src/main/resources/templates/admin/register_internn.html
@@ -36,13 +36,7 @@
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <input type="text" class="form-control" id="firstName" name="firstName" required>
-                                        <label for="firstName">First Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="lastName" name="lastName" required>
-                                        <label for="lastName">Last Name</label>
+                                        <label for="firstName">Full Name</label>
                                     </div>
                                 </div>
                             </div>
