--- a/src/main/resources/templates/intern/submit_forms.html
+++ b/src/main/resources/templates/intern/submit_forms.html
@@ -54,12 +54,8 @@
                 <td th:text="${intern.internId}"></td>
             </tr>
             <tr>
-                <th>First Name</th>
+                <th>Full Name</th>
                 <td th:text="${intern.firstName}"></td>
-            </tr>
-            <tr>
-                <th>Last Name</th>
-                <td th:text="${intern.lastName}"></td>
             </tr>
         </table>
     </div>
