--- a/src/main/resources/templates/intern/weekly_report_submission.html
+++ b/src/main/resources/templates/intern/weekly_report_submission.html
@@ -177,7 +177,7 @@
                                     <tr>
                                         <td>Submitted By:</td>
                                         <td
-                                                th:text="${weeklyReport.intern.firstName} + ' ' + ${weeklyReport.intern.lastName}"></td>
+                                                th:text="${weeklyReport.intern.firstName}"></td>
                                     </tr>
                                     <tr>
                                         <td>Status:</td>
