--- a/src/main/resources/templates/intern/intern_dashboard.html
+++ b/src/main/resources/templates/intern/intern_dashboard.html
@@ -78,7 +78,7 @@
                         </div>
                         <h2>
                             <span th:text="${intern.firstName}"></span>
-                            <span th:text="${intern.lastName}"></span>
+<!--                            <span th:text="${intern.lastName}"></span>-->
                         </h2>
                         <h3>Intern</h3>
                     </div>
@@ -136,8 +136,7 @@
                         <div class="tab-pane fade show active profile-overview"
                              id="profile-overview">
                             <h5 class="card-title">About</h5>
-                            <h4><p class="small fst-italic"><span th:text="${intern.firstName}"></span> <span
-                                    th:text="${intern.lastName}"></span></p></h4>
+                            <h4><p class="small fst-italic"><span th:text="${intern.firstName}"></span></p></h4>
 
                             <h5 class="card-title">Profile Details</h5>
                             <div class="row">
@@ -149,8 +148,7 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label ">Full Name</div>
                                 <div class="col-lg-9 col-md-8">
-                                    <span th:text="${intern.firstName}"></span> <span
-                                        th:text="${intern.lastName}"></span>
+                                    <span th:text="${intern.firstName}"></span>
                                 </div>
                             </div>
                             <div class="row">
@@ -238,8 +236,7 @@
                                 <div class="row" th:each="i : ${interns}">
                                     <div class="col-lg-3 col-md-4 g-label">Name</div>
                                     <div class="col-lg-9 col-md-8">
-                                        <span th:text="${i.firstName} + ' '"></span><span
-                                            th:text="${i.lastName}"></span>
+                                        <span th:text="${i.firstName}"></span>
                                     </div>
                                 </div>
                             </div>
