--- a/src/main/resources/templates/guide/weekly_report.html
+++ b/src/main/resources/templates/guide/weekly_report.html
@@ -147,7 +147,7 @@
 											<tr>
 												<td>Submitted By:</td>
 												<td
-														th:text="${report.intern.firstName} + ' ' + ${report.intern.lastName}"></td>
+														th:text="${report.intern.firstName}"></td>
 											</tr>
 											<tr>
 												<td>Status:</td>
