--- a/src/main/resources/templates/internapply.html
+++ b/src/main/resources/templates/internapply.html
@@ -256,17 +256,17 @@ html, body {
                             <!-- Column 1 -->
                             <div class="col-md-4">
                                 <div class="form-group" style="position: relative;">
-                                    <input type="text" class="form-control" placeholder="First Name*" id="firstName"
+                                    <input type="text" class="form-control" placeholder="Full Name*" id="firstName"
                                            name="firstName"
-                                           required data-tooltip="Please enter your first name">
+                                           required data-tooltip="Please enter your full name">
                                     <div class="tooltip" id="tooltip-firstName"></div>
                                 </div>
-                                <div class="form-group mt-2" style="position: relative;">
-                                    <input type="text" class="form-control"
-                                           placeholder="Last Name*" id="lastName" name="lastName"
-                                           required data-tooltip="Please enter your last name">
-                                    <div class="tooltip" id="tooltip-lastName"></div>
-                                </div>
+<!--                                <div class="form-group mt-2" style="position: relative;">-->
+<!--                                    <input type="text" class="form-control"-->
+<!--                                           placeholder="Last Name*" id="lastName" name="lastName"-->
+<!--                                           required data-tooltip="Please enter your last name">-->
+<!--                                    <div class="tooltip" id="tooltip-lastName"></div>-->
+<!--                                </div>-->
                                 <div class="form-group mt-2" style="position: relative;">
                                     <input type="tel" class="form-control"
                                            placeholder="Contact Number*" id="contactNo" name="contactNo"
