--- a/src/main/resources/templates/super_admin/super_admin_dashboard.html
+++ b/src/main/resources/templates/super_admin/super_admin_dashboard.html
@@ -89,7 +89,7 @@
 												<i class="bi bi-people"></i>
 											</div>
 											<div class="ps-3">
-												<h6 th:text="${adminCount}"></h6>
+												<h6 th:text="${HRCount}"></h6>
 												<span class="text-success small pt-1 fw-bold">HRs</span>
 											</div>
 										</div>
